[package]
name = "caniuse"
description = "caniuse-db for rust."
version = "1.0.30000909"
authors = ["강동윤 <kdy1@outlook.kr"]
license = "MIT/Apache-2.0"
documentation = "http://docs.rs/caniuse/"
homepage = "https://github.com/kdy1/rust-caniuse"
repository = "https://github.com/kdy1/rust-caniuse"
build = "build.rs"

[dependencies]
phf = "0.7"
serde = "1"
serde_derive = "1"

[build-dependencies]
reqwest = "0.9"
phf = "0.7"
phf_codegen = "0.7"
serde = "1"
serde_json = "1"
serde_derive = "1"
inflect = "^0.1"